overlays/uksouth-lloyds/olympus/docs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: ingress-docs-auth
  name: docs.${cluster_name}.${cluster_location}.bink.sh
  namespace: default
spec:
  rules:
    - host: docs.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docs
                port:
                  number: 80
  tls:
    - hosts:
        - docs.${cluster_name}.${cluster_location}.bink.sh
